Make sure all text entry fields have visible frames around them

--- a/resources/look-and-feel.css
+++ b/resources/look-and-feel.css
@@ -17,3 +17,7 @@
 .Search-form {
     padding: 15px 30px;
 }
+
+textview {
+    padding: 4px;
+}
